Fikset bilde til nye mattefag og farger på quiz

--- a/realfag/programfag/s_matte/matte_s.css
+++ b/realfag/programfag/s_matte/matte_s.css
@@ -6,6 +6,9 @@
     background-image: url("../../../assets/imgs/matte_s/matte_på_tavle.png"); /* bilde kan byttes ut */
 }
 #fagnummer2 .visuelt-element {
+    background-image: url("../../../assets/imgs/matte_s/forstorrelsesglass_paa_graf.png"); /* bilde kan byttes ut */
+}
+#fagnummer3 .visuelt-element {
     background-image: url("../../../assets/imgs/matte_s/integrasjon.png"); /* bilde kan byttes ut */
 }
 
