--- a/widgets/felles_quiz_filer/quiz.css
+++ b/widgets/felles_quiz_filer/quiz.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: navy;
+    color: black;
     width: auto;
 }
 #spørsmål {
@@ -31,7 +31,7 @@
     text-align: center;
 }
 .alternativ:hover {
-    background-color: #eda4ca;
+    background-color: var(--elvebakken_rosa_lys);
     cursor: pointer;
 }
 button {
